Todo:
- Make decision:
  - Create a mechanism to set up OpenDialog for each file type.
    OR
  - Create multiple OpenDialogs for each type and show appropiate dialog when needed.
- Load the CEL is something is selected in the OpenDialog.
- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.10
- SubMenu items insert a message into queue when clicked.
- Clicking on CEL/Load invokes the windows standard open file dialog. (Won't open anything yet.)
- MSG_MOUSECOORDS messages are removed. They caused queue overflow because when
  a file dialog was open, but the mouse moved over drawarea, SDL accumulated the
  events and fired all at once when the dialog was closed. Coordinates are read
  from DrawArea and passed to Controls in main loop instead.

2023.03.09
- Submenu opens when hovering mouse on menu. Moving to another menu or outside
  the menu bar or submenu hides the submenu.
- Moving the mouse over the submenu moves the selection.

2023.03.08
- Using mouse wheel over the palette colors in PaletteEditor switches banks.
- Menu appears in the top row of the screen.

2023.03.07
- Moved the vertical slider's mouse wheel event to the vcc_SliderLogic unit, where it belongs.
- Added wheel event to the horizontal slider too.

2023.03.06
- You can change the vertical slider with mouse wheel.
- The vertical slider in PaletteEditor switches banks.
- Using the mouse wheel over the PaletteEditor no longer zooms DrawArea.

2023.03.03
- CreateRelease.bat added.
- KeyMapping is saved back to INI file.
- When in PaletteEditor, right clicking on DrawArea exits PaletteEditor.
- Added a vertical slider to PaletteEditor, it will switch the palette banks. (Not yet doing it.)

2023.03.02
- Added sliders to PaletteEditor. They are not changing anything yet.
- Sliders now change the currently selected colors RGB channels.
- When invoking PaletteEditor, the sliders are set to the selected color's RGB values.