@@ -21,8 +21,8 @@ GetColor=58
 
 [DrawArea]
 Zoom=3
-ZoomLeft=-8
-ZoomTop=36
+ZoomLeft=-20
+ZoomTop=-44
 
 [BasicControls]
 Tool0=DRAW
@@ -40,7 +40,7 @@ Ink4=H GRAD
 Ink5=H GRAD
 ActiveInk=0
 FillShapes=No
-ClearKeyColor=Yes
+ClearKeyColor=No
 UseAlpha=No
 
 [Settings]
@@ -57,5 +57,5 @@ Selected4=4
 Selected5=5
 Selected6=6
 Selected7=7
-ActiveColor=14
+ActiveColor=2
 
