@@ -9,25 +9,25 @@
         <Filename Value="BurdockPaint.lpr"/>
         <IsPartOfProject Value="True"/>
         <CursorPos X="14" Y="4"/>
-        <UsageCount Value="199"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="140"/>
-        <CursorPos Y="162"/>
-        <UsageCount Value="199"/>
+        <TopLine Value="133"/>
+        <CursorPos Y="155"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
-        <TopLine Value="50"/>
-        <CursorPos X="3" Y="68"/>
-        <UsageCount Value="199"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="221"/>
+        <CursorPos X="36" Y="256"/>
+        <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -36,45 +36,46 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="29"/>
         <CursorPos X="25" Y="70"/>
-        <UsageCount Value="199"/>
+        <UsageCount Value="200"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPButtonUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="78"/>
         <CursorPos X="10" Y="101"/>
-        <UsageCount Value="194"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="195"/>
       </Unit>
       <Unit>
         <Filename Value="BDPControlsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="3"/>
         <TopLine Value="288"/>
-        <CursorPos X="10" Y="313"/>
-        <UsageCount Value="192"/>
+        <CursorPos Y="307"/>
+        <UsageCount Value="193"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="370"/>
-        <CursorPos X="17" Y="442"/>
-        <FoldState Value=" T7CH5 T3jF048 pifjN0L5]9cjS06512 PiUj90y"/>
-        <UsageCount Value="184"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="177"/>
+        <CursorPos X="36" Y="379"/>
+        <FoldState Value=" T7CH5 T3jF048 pifjN0L5]9cjS0621212 PiFj90c"/>
+        <UsageCount Value="185"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="103"/>
-        <CursorPos X="14" Y="124"/>
-        <UsageCount Value="183"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="935"/>
+        <CursorPos Y="976"/>
+        <FoldState Value=" T3kJ0r5 pidkO0Y4]9cjF0M[94gjV0p]RjMkL0b2]94k4066 PiWiR0B"/>
+        <UsageCount Value="184"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -82,7 +83,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="7"/>
         <CursorPos X="15" Y="41"/>
-        <UsageCount Value="175"/>
+        <UsageCount Value="176"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -91,18 +92,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="127"/>
         <CursorPos X="3" Y="149"/>
-        <UsageCount Value="173"/>
+        <UsageCount Value="174"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMessageUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="33"/>
         <CursorPos Y="66"/>
-        <FoldState Value=" T3i205113 PMe0U"/>
-        <UsageCount Value="162"/>
-        <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="163"/>
       </Unit>
       <Unit>
         <Filename Value="BDPCursorUnit.pas"/>
@@ -110,16 +108,19 @@
         <EditorIndex Value="-1"/>
         <CursorPos Y="21"/>
         <FoldState Value=" T7AC2 T3K0{yp"/>
-        <UsageCount Value="161"/>
+        <UsageCount Value="162"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1178"/>
-        <CursorPos X="13" Y="1204"/>
-        <UsageCount Value="159"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="1073"/>
+        <CursorPos Y="1087"/>
+        <UsageCount Value="160"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
@@ -127,7 +128,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="214"/>
         <CursorPos Y="258"/>
-        <UsageCount Value="158"/>
+        <UsageCount Value="159"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -136,7 +137,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="119"/>
         <CursorPos Y="163"/>
-        <UsageCount Value="146"/>
+        <UsageCount Value="147"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -145,14 +146,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="139"/>
+        <UsageCount Value="140"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSplashScreenUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="52"/>
-        <UsageCount Value="122"/>
+        <UsageCount Value="123"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -160,7 +161,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="26" Y="51"/>
-        <UsageCount Value="110"/>
+        <UsageCount Value="111"/>
       </Unit>
       <Unit>
         <Filename Value="BDPUndoUnit.pas"/>
@@ -168,15 +169,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="132"/>
         <CursorPos Y="273"/>
-        <UsageCount Value="100"/>
+        <UsageCount Value="101"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
-        <TopLine Value="135"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="123"/>
         <CursorPos Y="162"/>
-        <UsageCount Value="73"/>
+        <UsageCount Value="74"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -184,16 +185,16 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
         <CursorPos Y="54"/>
-        <UsageCount Value="65"/>
+        <UsageCount Value="66"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="94"/>
         <CursorPos X="12" Y="120"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="39"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -303,7 +304,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="267"/>
         <CursorPos X="3" Y="276"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit>
       <Unit>
         <Filename Value="units\SDL2\sdlrect.inc"/>
@@ -405,124 +406,124 @@
     </Units>
     <JumpHistory HistoryIndex="29">
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="117" TopLine="109"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="109" Column="17" TopLine="91"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="42" Column="21"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="19" Column="11" TopLine="3"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="111" Column="3" TopLine="109"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="17" Column="15"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPSharedUnit.pas"/>
-        <Caret Line="43" Column="16" TopLine="8"/>
-      </Position>
-      <Position>
         <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="26" Column="29"/>
+        <Caret Line="155" TopLine="133"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="8" Column="66"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="929" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="119" TopLine="82"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="930" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="191" TopLine="155"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="931" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BurdockPaint.lpr"/>
-        <Caret Line="28"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="941" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="135" Column="41" TopLine="118"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="942" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="21" Column="6"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="943" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="9" Column="48"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="944" TopLine="907"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="12"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="948" TopLine="911"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="14" Column="9"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="949" TopLine="912"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="40" Column="20"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="950" TopLine="913"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="216" Column="34" TopLine="194"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="951" TopLine="914"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="153" TopLine="132"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="952" TopLine="915"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="67" Column="69" TopLine="18"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="961" TopLine="931"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="58" Column="15" TopLine="17"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="962" TopLine="931"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="26" Column="9" TopLine="11"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="964" TopLine="931"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="153" Column="26" TopLine="131"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="965" TopLine="931"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="64" Column="28" TopLine="32"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="966" TopLine="931"/>
       </Position>
       <Position>
-        <Filename Value="BDPMessageUnit.pas"/>
-        <Caret Line="103" Column="38" TopLine="36"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="968" TopLine="935"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="161" Column="24" TopLine="137"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="969" TopLine="935"/>
       </Position>
       <Position>
-        <Filename Value="BDPDrawAreaUnit.pas"/>
-        <Caret Line="167" Column="3" TopLine="152"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="970" TopLine="935"/>
       </Position>
       <Position>
-        <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="162" Column="43" TopLine="124"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="971" TopLine="935"/>
       </Position>
       <Position>
-        <Filename Value="BDPSharedUnit.pas"/>
-        <Caret Line="68" Column="3" TopLine="50"/>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="972" TopLine="935"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="973" TopLine="935"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="974" TopLine="935"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="971" TopLine="935"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPImageUnit.pas"/>
+        <Caret Line="976" Column="24" TopLine="935"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1087" TopLine="1073"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPPaletteUnit.pas"/>
+        <Caret Line="373" TopLine="177"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPPaletteUnit.pas"/>
+        <Caret Line="379" Column="36" TopLine="177"/>
       </Position>
     </JumpHistory>
     <RunParams>
